--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-wrapper">
             <div class="header-brand">
-                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14985/logo-2021.png" alt="">
+                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14985/logo-2021.png" alt="" class="img-logo">
                 <span class="brand-name">TSHIRT STORE &reg; </span>
             </div>
             <ul class="nav-list">
@@ -29,9 +29,96 @@
         </div>
     </header>
 
+    <!-- 選擇列表 -->
+    <section class="filter-banner">
+        <h1 class="filter-title">Basic T-shirts</h1>
+        <div class="section-group">
+        <select name="size" id="" class="filter-select size">
+            <option value="1">Size</option>
+            <option value="1">S</option>
+            <option value="2">M</option>
+            <option value="3">L</option>
+        </select>
+        <select name="color" id="color" class="filter-select color">
+            <option value="1">Color</option>
+            <option value="1">red</option>
+            <option value="2">white</option>
+            <option value="3">blaxk</option>
+        </select>
+        <select name="sort" id="sort" class="filter-select sort">
+            <option value="1">Sort</option>
+            <option value="1">sort</option>
+            <option value="2">sort</option>
+            <option value="3">sort</option>
+        </select>
+    </div>
+    </section>
     <!-- 圖片列表 -->
+<section class="show">
+    <div class="container">
+        <div class="card-wrapper">
+        <div class="card">
+            <div class="card-model">
+                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt="" class="card-img">
+                <span class="card-icon"><i class="far fa-heart"></i></span>
+            </div>
+            <div class="card-info">
+                <div class="card-title">T-shirt Stockholm Base Leaf Green</div>
+                <strong class="card-price">29.00 USD</strong>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="card-model">
+                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt="" class="card-img">
+                <span class="card-icon"><i class="far fa-heart"></i></span>
+            </div>
+            <div class="card-info">
+                <div class="card-title">T-shirt Stockholm Base Leaf Green</div>
+                <strong class="card-price">29.00 USD</strong>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-model">
+                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt="" class="card-img">
+                <span class="card-icon"><i class="far fa-heart"></i></span>
+            </div>
+            <div class="card-info">
+                <div class="card-title">T-shirt Stockholm Base Leaf Green</div>
+                <strong class="card-price">29.00 USD</strong>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-model">
+                <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt="" class="card-img">
+                <span class="card-icon"><i class="far fa-heart"></i></span>
+            </div>
+            <div class="card-info">
+                <div class="card-title">T-shirt Stockholm Base Leaf Green</div>
+                <strong class="card-price">29.00 USD</strong>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
 
+<section class="pagination">
+    <p>14 / 14</p>
+</section>
+
+<section class="forn-banner">
+    <div class="forn">
+        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14376/template.png" alt="" class="forn-img">
+        <div class="forn-group">
+          <span class="forn-title">Get the latest T-shirt frops in your inbox! Sign up for out Newsletter</span>
+          <div class="forn-text">
+            <input type="text" class="forn-email" placeholder="Enter email for news updates">
+            <button class="forn-btn">SIGN UP!</button>
+          </div>
+          <span class="forn-copyright">By registering you agree with our Integrity Policy</span>
+        </div>
+    </div>
+</section>
 
     <script src="https://kit.fontawesome.com/2cbb3ef7b8.js"></script>
 </body>
