滑鼠事件及banner調整
HTML新增滑鼠事件
RWD總調整

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             <div class="card-wrapper">
                 <div class="card">
                     <div class="card-model">
-                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
+                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt="假圖"
                             class="card-img">
+                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14372/bastian-ignacio-vega-cani-9UAfLTqMoS0-unsplash__2_.png"
+                            alt="穿衣1" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -74,6 +76,8 @@
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
                             class="card-img">
+                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14365/anomaly-WWesmHEgXDs-unsplash.jpg"
+                            alt="穿衣2" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -84,7 +88,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14374/faith-yarn-hgtWvsq5e2c-unsplash.png"
+                            alt="穿衣3" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -95,7 +101,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14373/christian-bolt-VW5VjskNXZ8-unsplash.png"
+                            alt="穿衣4" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -107,6 +115,8 @@
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
                             class="card-img">
+                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14372/bastian-ignacio-vega-cani-9UAfLTqMoS0-unsplash__2_.png"
+                            alt="穿衣1" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -117,7 +127,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14365/anomaly-WWesmHEgXDs-unsplash.jpg"
+                            alt="穿衣2" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -128,7 +140,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14374/faith-yarn-hgtWvsq5e2c-unsplash.png"
+                            alt="穿衣3" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -139,7 +153,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14373/christian-bolt-VW5VjskNXZ8-unsplash.png"
+                            alt="穿衣4" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -151,6 +167,8 @@
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
                             class="card-img">
+                        <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14372/bastian-ignacio-vega-cani-9UAfLTqMoS0-unsplash__2_.png"
+                            alt="穿衣1" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -161,7 +179,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"> <img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14365/anomaly-WWesmHEgXDs-unsplash.jpg"
+                            alt="穿衣2" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -172,7 +192,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14374/faith-yarn-hgtWvsq5e2c-unsplash.png"
+                            alt="穿衣3" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -183,7 +205,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14373/christian-bolt-VW5VjskNXZ8-unsplash.png"
+                            alt="穿衣4" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -194,7 +218,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"> <img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14372/bastian-ignacio-vega-cani-9UAfLTqMoS0-unsplash__2_.png"
+                            alt="穿衣1" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -205,7 +231,9 @@
                 <div class="card">
                     <div class="card-model">
                         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14362/t-shirt.png" alt=""
-                            class="card-img">
+                            class="card-img"><img
+                            src="https://assets-lighthouse.alphacamp.co/uploads/image/file/14365/anomaly-WWesmHEgXDs-unsplash.jpg"
+                            alt="穿衣2" class="card-hover">
                         <span class="card-icon"><i class="far fa-heart"></i></span>
                     </div>
                     <div class="card-info">
@@ -224,7 +252,7 @@
             <div class="forn-title">Get the latest T-shirt drops in your inbox! Sign up for our Newsletter.</div>
             <div class="forn-group">
                 <input type="text" class="forn-email" placeholder="Enter email for news updates">
-                <button class="forn-btn">SIGN UP!</button>
+                <button class="forn-btn" type="submit">SIGN UP!</button>
             </div>
             <div class="forn-connect">By registering you agree with our <a href="" class="connect-us">Integrity
                     Policy</a> </div>
